[package]
name = "doggosearch"
version = "1.0.0"
edition = "2021"
license = "MIT"
description = "Find doggo in word search... in Rust"
repository = "https://github.com/cbebe/doggosearch"
keywords = ["fun", "word-search"]
categories = ["cli"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[profile.release]
strip = "debuginfo"
