[package]
name = "dog_bin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.139"

[build-dependencies]
dog_lib = { path = "../dog_lib" }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
strip = "debuginfo"
opt-level = "z"
