[package]
name = "dog_bin"
version = "1.0.0"
edition = "2021"
license = "MIT"
description = "Find doggo in word search with `no_std`"
readme = "../README.md"
repository = "https://github.com/cbebe/doggosearch/dog_tiny"
keywords = ["fun", "word-search"]
categories = ["cli"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.139"

[build-dependencies]
dog_lib = { path = "../dog_lib" }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
strip = "debuginfo"
opt-level = "z"
