[package]
name = "dog_tiny"
version = "1.0.0"
edition = "2021"
license = "MIT"
description = "Find doggo in word search with tiny Linux binary"
readme = "../README.md"
repository = "https://github.com/cbebe/doggosearch/dog_tiny"
keywords = ["fun", "word-search"]
categories = ["cli"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
dog_lib = { path = "../dog_lib" }
